# rust_webserver_template

./: .env  .gitignore  Cargo.toml  Cargo.toml.liquid  Dockerfile  README.markdown  README.md  README.md~  cargo-generate.toml  docker-compose-mysql.yaml  docker-compose-postgres.yaml  docker-compose-sqlite.yaml  docker-compose.yaml  read.txt  read.txt~
src/: init.rs  main.rs
src/configs/: mod.rs
src/middleware/: cors_mgt.rs  mod.rs
src/models/: database.rs
