[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
description = "{{description}}"
authors = ["{{author_name}}"]

[dependencies]
actix-governor = "0.8.0"
actix-web = "4.9.0"
{%- if include_cors %}
actix-cors = "0.7.0"
{%- endif %}
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
{%- if include_logging %}
log = "0.4.26"
log4rs = "1.3.0"
{%- endif %}
rust_decimal = "1.36.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
{%- if database == "postgres" %}
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "rust_decimal", "chrono", "uuid"] }
{%- elsif database == "mysql" %}
sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio", "rust_decimal", "chrono", "uuid"] }
{%- elsif database == "sqlite" %}
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "rust_decimal", "chrono", "uuid"] }
{%- endif %}
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.15.1", features = ["v4", "serde"] }
