[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
description = "{{description}}"
authors = ["{{author_name}}"]

[dependencies]
actix-governor = "0.8.0"
actix-web = "4.9.0"
actix-cors = { version = "0.7.0", optional = true }
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
log = { version = "0.4.26", optional = true }
log4rs = { version = "1.3.0", optional = true }
rust_decimal = "1.36.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "rust_decimal", "chrono", "uuid"], optional = true }
sqlx-postgres = { version = "0.8.3", optional = true }
sqlx-mysql = { version = "0.8.3", optional = true }
sqlx-sqlite = { version = "0.8.3", optional = true }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.15.1", features = ["v4", "serde"] }

